# agentic-self-learning

./: README.md  pyproject.toml
agentic_self_learning/: __init__.py  cli.py  orchestrator.py  schemas.py  server.py
agentic_self_learning/agents/: __init__.py  answer_agent.py  evaluator_agent.py  question_agent.py
agentic_self_learning/tools/: __init__.py  retrieval.py
data/: knowledge_base.jsonl
tests/: test_pipeline.py
